# libsndfile

./: .gitignore  .gitmodules  Android.mk  CMakeLists.txt  au.c  command.c  common.h  config.h  file_io.c  flac.c  makefile  ogg-wrapper.h  ogg.c  ogg_pcm.c  ogg_speex.c  ogg_vorbis.c  sndfile.c  sndfile.h  sndfile.hh
