set(SNDFILE_SOURCES
    G72x/g721.c
    G72x/g723_16.c
    G72x/g723_24.c
    G72x/g723_40.c
    G72x/g72x.c
    G72x/g72x.h
    G72x/g72x_priv.h
    G72x/g72x_test.c
    GSM610/add.c
    GSM610/code.c
    GSM610/config.h
    GSM610/decode.c
    GSM610/gsm.h
    GSM610/gsm610_priv.h
    GSM610/gsm_create.c
    GSM610/gsm_decode.c
    GSM610/gsm_destroy.c
    GSM610/gsm_encode.c
    GSM610/gsm_option.c
    GSM610/long_term.c
    GSM610/lpc.c
    GSM610/preprocess.c
    GSM610/rpe.c
    GSM610/short_term.c
    GSM610/table.c
    aiff.c
    alaw.c
    Android.mk
    au.c
    audio_detect.c
    avr.c
    broadcast.c
    caf.c
    chanmap.c
    chanmap.h
    chunk.c
    command.c
    common.c
    common.h
    config.h
    dither.c
    double64.c
    dwd.c
    dwvw.c
    file_io.c
    flac.c
    float32.c
    g72x.c
    gsm610.c
    htk.c
    id3.c
    ima_adpcm.c
    ima_oki_adpcm.c
    ima_oki_adpcm.h
    interleave.c
    ircam.c
    macbinary3.c
    macos.c
    makefile
    mat4.c
    mat5.c
    mpc2k.c
    ms_adpcm.c
    nist.c
    ogg.c
    ogg.h
    ogg_pcm.c
    ogg_speex.c
    ogg_vorbis.c
    paf.c
    pcm.c
    pvf.c
    raw.c
    rf64.c
    rx2.c
    sd2.c
    sds.c
    sf_unistd.h
    sfconfig.h
    sfendian.h
    sndfile.c
    sndfile.h
    sndfile.hh
    strings.c
    svx.c
    test_audio_detect.c
    test_broadcast_var.c
    test_conversions.c
    test_endswap.c
    test_file_io.c
    test_float.c
    test_ima_oki_adpcm.c
    test_log_printf.c
    test_main.c
    test_main.h
    test_strncpy_crlf.c
    txw.c
    ulaw.c
    voc.c
    vox_adpcm.c
    w64.c
    wav.c
    wav_w64.c
    wav_w64.h
    windows.c
    wve.c
    xi.c)

include_directories(.)
include_directories(G72x)
include_directories(GSM610)

add_library(sndfile ${SNDFILE_SOURCES})